<resources>
    <string name="app_name">My Application1</string>
    <string name="teamName">Team A</string>
    <string name="s_out">0</string>
    <string name="btn_1">+1 points</string>
    <string name="btn_2">+2 points</string>
    <string name="btn_3">+3 points</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_rmb_hint">Input RMB</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="btn_opencfg_label">Config</string>
    <string name="btn_save_label">Save</string>
    <string name="menu_set_label">Setting</string>
    <string name="label_open_list">OpenList</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="rdo_home_label">首页</string>
    <string name="rdo_func_label">功能</string>
    <string name="rdo_setting_label">设置</string>
</resources>
