<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".ysy">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TeamA"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:textSize="65sp"
                android:layout_marginBottom="24dp"/>

            <Button
                android:id="@+id/btn3"
                android:text="@string/btn_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnAdd3"/>

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_2"
                android:onClick="btnAdd2"/>

            <Button
                android:id="@+id/btn1"
                android:text="@string/btn_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnAdd1"/>
        </LinearLayout>

        <TextView
            android:layout_width="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorPrimary"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TeamB"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/score2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:textSize="65sp"
                android:layout_marginBottom="24dp"/>

            <Button
                android:id="@+id/btn3b"
                android:text="@string/btn_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnAdd3"/>

            <Button
                android:id="@+id/btn2b"
                android:text="@string/btn_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnAdd2"/>

            <Button
                android:id="@+id/btn1b"
                android:text="@string/btn_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnAdd1"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:text="Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button"
        android:onClick="btnReset"/>




</RelativeLayout>